# Minecheap

./: CMakeLists.txt  SavedData.xml  imgui.ini
CMake/: CMakeLists_lib.cmake  FindAssimp.cmake  FindFreeType.cmake  FindIrrklang.cmake  FindTinyXML2.cmake
_scripts/: generate_cmake_lib.sh
app/: CMakeLists.txt
app/CMake/: CMakeLists_app.cmake
app/_scripts/: generate_cmake_app.sh
app/source/: main.cpp
app/source/Core/: App.cpp  App.h  CameraSettings.h  FSM.cpp  FSM.h  GameManager.cpp  GameManager.h  InputManager.cpp  InputManager.h  SoundManager.cpp  SoundManager.h
app/source/Gameplay/: BlockData.cpp  BlockData.h  BlockDataBase.cpp  BlockDataBase.h  BlockID.h  CraftingDataBase.cpp  CraftingDataBase.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  GameObject.cpp  GameObject.h  InventoryManager.cpp  InventoryManager.h  ItemData.cpp  ItemData.h  ItemDataBase.cpp  ItemDataBase.h  ItemID.h  Player.cpp  Player.h  Zombie.cpp  Zombie.h
app/source/Gameplay/Components/: InventoryComponent.cpp  InventoryComponent.h  LifeComponent.cpp  LifeComponent.h
app/source/Physics/: Raycast.cpp  Raycast.h
app/source/Save/: SaveXML.cpp  SaveXML.h
app/source/States/: State.h  StateMenu.cpp  StateMenu.h  StatePlay.cpp  StatePlay.h
app/source/UI/: Settings.cpp  Settings.h  UI.cpp  UI.h
app/source/WorldGeneration/: Chunk.cpp  Chunk.h  World.cpp  World.h
doc/: Documentation.docx  ~$cumentation.docx
libgfx/: CMakeLists.txt
libgfx/CMake/: CMakeLists_libgfx.cmake
libgfx/_scripts/: generate_cmake_libgfx.sh
libgfx/source/: ResourceGFX.cpp  ResourceGFX.h
libgfx/source/DataStructure/: Graph.cpp  Graph.h
libgfx/source/Debug/: Assertion.h  Log.cpp  Log.h
libgfx/source/LowRenderer/: Camera.cpp  Camera.h  Light.cpp  Light.h  Model.cpp  Model.h
libgfx/source/Maths/: mat3.cpp  mat3.h  mat4.cpp  mat4.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
libgfx/source/Physics/: Transform.cpp  Transform.h
libgfx/source/Resources/: LightManager.cpp  LightManager.h  Mesh.cpp  Mesh.h  ResourcesManager.cpp  ResourcesManager.h  Scene.cpp  Scene.h  Settings.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
resources/Shaders/: ShaderFrag.frag  ShaderVertex.vert
resources/XML/: save.xsd
